--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="grid-item events">
                 <p>Upcoming Events</p>
                 <div>
-                    <iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2F100063526751714%2Fvideos%2F1066844104013707%2F&show_text=true&width=267&t=0" width="267" height="591" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
+                    <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3Dpfbid0NZPt1sciwmd1yrtZTEf9qeY7kUckAsfcmsKFMQ2RKgF7CKcjApfdkecayY939DHJl%26id%3D100063526751714&show_text=true&width=500" width="500" height="470" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                 </div>
             </div>
 
